k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-service

spec:
  type: NodePort

  selector:
    app: ghost-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30007
