k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ghost-ingress

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - ghost.local
      secretName: ghost-tls

  rules:
    - host: ghost.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghost-service
                port:
                  number: 80
